--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,8 +17,8 @@ services:
     tmpfs:
       /tmp/pids/
     ports:
-      - "3000:3000"
-    command: bundle exec rails s -p 3000 -b '0.0.0.0'
+      - "3001:3000"
+    command: sh -c "haproxy -D -f /app/haproxy.conf && bundle exec rails s -p 3000 -b '0.0.0.0'"
     depends_on:
       - db
 
